# reverse_turing_test

./: LICENSE  README.md  pyproject.toml
src/rtt/: __init__.py  ai_player.py  interrogator.py  openai_agent.py  ui.py
src/rtt/utils/: __init__.py  get_token.py  get_user_input.py  pretty_print.py
